# trinamic_3110

./: .gitignore  CMakeLists.txt  Makefile.multi.bck  MultiClassesFactory.cpp  README.md  TMCM_3110.multi.xmi  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  main.cpp  stopwatch.h  tangohelpers.cpp  tangohelpers.h
TMCM_Global/: CMakeLists.txt  ClassFactory.cpp  TMCM_Global.cpp  TMCM_Global.h  TMCM_Global.xmi  TMCM_GlobalClass.cpp  TMCM_GlobalClass.h  TMCM_GlobalStateMachine.cpp  main.cpp
TMCM_IO/: CMakeLists.txt  ClassFactory.cpp  TMCM_IO.cpp  TMCM_IO.h  TMCM_IO.xmi  TMCM_IOClass.cpp  TMCM_IOClass.h  TMCM_IOStateMachine.cpp  main.cpp
TMCM_Motor/: CMakeLists.txt  ClassFactory.cpp  TMCM_Motor.cpp  TMCM_Motor.h  TMCM_Motor.xmi  TMCM_MotorClass.cpp  TMCM_MotorClass.h  TMCM_MotorStateMachine.cpp  main.cpp
core/: CMakeLists.txt  core.cpp  core.h  stopwatch.h
